<resources>
    <string name="app_name">TravelJournal</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="about">About</string>
    <string name="contact">Contact</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="logout">Log out</string>
    <string name="not_logged">Not logged in</string>
    <string name="empty_trip_name">You haven\'t provided a trip name</string>
    <string name="empty_destination">You haven\'t provided a destination</string>
    <string name="no_trip_type_selected">You haven\'t selected a trip type</string>
    <string name="no_start_date">You haven\'t provided a start date</string>
    <string name="no_end_date">You haven\'t provided an end date</string>
    <string name="start_after_end">The start date is more recent than the end date</string>
    <string name="no_picture_selected">You haven\'t selected a picture</string>
    <string name="reintroduce_input">Reintroduce Input</string>
    <string name="select">SELECT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="seaside">Seaside</string>
    <string name="city_break">City Break</string>
    <string name="mountains">Mountains</string>

</resources>
