<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home_item"
            android:icon="@drawable/ic_home_item"
            android:title="@string/home" />
        <item
            android:id="@+id/fav_item"
            android:icon="@drawable/ic_fav_item"
            android:title="@string/favorites" />
        <item
            android:id="@+id/about_item"
            android:icon="@drawable/ic_about_item"
            android:title="@string/about" />
        <item
            android:id="@+id/contact_item"
            android:icon="@drawable/ic_contact_item"
            android:title="@string/contact" />
        <item
            android:id="@+id/share_item"
            android:icon="@drawable/ic_share_item"
            android:title="@string/share" />
        <item
            android:id="@+id/send_item"
            android:icon="@drawable/ic_send_item"
            android:title="@string/send" />
        <item
            android:id="@+id/logout_item"
            android:icon="@drawable/ic_logout_item"
            android:title="@string/logout"/>

    </group>
</menu>